<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:id="@+id/splash_screen">

    <ImageView
        android:id="@+id/logo_splash"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/splash_img"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_content" />

    <TextView
        android:id="@+id/title_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_subtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <ProgressBar
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>